--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -18,8 +18,11 @@
     }
   }
 
+
+
+
   section {
-    padding: 150px 0;
+    padding: 90px 0;
   }
 
   #WWD {
@@ -33,14 +36,31 @@
   }
 
   .sub-heading {
-      text-align: left;
+      padding-top: 20px;
+      text-align: center;
   }
 
   .wrapper {
       padding: 30px;
-      padding-top: 20px;
+      padding-top: 60px;
 
   }
+
+  .info {
+    text-align: left;
+    padding: 20px 20px 20px 20px;
+  }
+
+  .snippet {
+    border-top: 1px solid #e5e5e5;
+    
+  }
+
+  #bleft {
+    border-left: 1px solid #e5e5e5;
+  }
+
+
 
 
   /* EVENT CSS */
