--- a/src/assets/sass/global/typography.scss
+++ b/src/assets/sass/global/typography.scss
@@ -1,5 +1,5 @@
 h1 {
-    font-family: 'LiSong Pro', serif;
+    font-family: 'LiSong Pro', serif !important;
     font-size: 5em;
     font-weight: 400;
 }
@@ -13,4 +13,8 @@ h2 {
         margin: 0 auto;
         width: 280px;
     }
+}
+
+h1, h2, h3, h4, h5, h6 {
+font-family: "Helvetica", $font-family-base;
 }
