--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -30,6 +30,16 @@
 
   .title {
       text-align: center;
+      font-family: Helvetica;
+      font-size: 2em;
+      letter-spacing: -0.05em;
+  }
+
+  .name-title {
+      text-align: center;
+      font-family: Helvetica;
+      font-size: 1.3em;
+      letter-spacing: -0.05em;
   }
 
   .sub-heading {
@@ -40,6 +50,26 @@
       padding: 30px;
       padding-top: 20px;
 
+  }
+
+  #time {
+    color: #a3a1a1;
+    text-align: center;
+  }
+
+  .desc {
+    font-size: 0.75em !important;
+    text-align: center !important;
+  }
+
+  .event-list {
+    padding-top: 30px !important;
+  }
+
+  .more {
+    float: right;
+    width: 100%;
+    padding: 15px;
   }
 
 
@@ -102,8 +132,7 @@
           font-weight: 300;
           margin: 0px;
       }
-      .event-list > li > .info > ul,
-      .event-list > li > .social > ul {
+      .event-list > li > .info > ul{
           display: table;
           list-style: none;
           margin: 10px 0px 0px;
@@ -131,12 +160,10 @@
               height: 120px;
               padding: 0px;
           }
-          .event-list > li > time,
-          .event-list > li > img  {
+          .event-list > li > time{
               display: inline-block;
           }
-          .event-list > li > time,
-          .event-list > li > img {
+          .event-list > li > time{
               width: 120px;
               float: left;
           }
@@ -144,8 +171,7 @@
               background-color: rgb(245, 245, 245);
               overflow: hidden;
           }
-          .event-list > li > time,
-          .event-list > li > img {
+          .event-list > li > time{
               width: 120px;
               height: 120px;
               padding: 0px;
@@ -166,23 +192,8 @@
               left: 0px;
               bottom: 0px;
           }
-          .event-list > li > .social {
-              position: absolute;
-              top: 0px;
-              right: 0px;
-              display: block;
-              width: 40px;
-          }
-          .event-list > li > .social > ul {
-              border-left: 1px solid rgb(230, 230, 230);
-          }
-          .event-list > li > .social > ul > li {
-              display: block;
-              padding: 0px;
-          }
-          .event-list > li > .social > ul > li > a {
-              display: block;
-              width: 40px;
-              padding: 10px 0px 9px;
-          }
-      }  
+
+          
+  }
+         
+
