--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -195,5 +195,12 @@
 
           
   }
+
+  .modal:nth-of-type(even) {
+    z-index: 1042 !important;
+}
+.modal-backdrop.in:nth-of-type(even) {
+    z-index: 1041 !important;
+}
          
 
