--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -239,5 +239,11 @@
 .modal-backdrop.in:nth-of-type(even) {
     z-index: 1041 !important;
 }
+
+#map {
+        width: 100%;
+        height: 400px;
+        
+      }
          
 
