lighter font weight

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -245,5 +245,9 @@
         height: 400px;
         
       }
-         
+        
+.CUinfo{
+  padding-top: 10px;
+  font-weight: 100 !important;
+}
 
