--- a/src/assets/sass/modules/event-list.scss
+++ b/src/assets/sass/modules/event-list.scss
@@ -3,34 +3,23 @@
     margin: 0px;
     padding: 0px;
 
-    div {
-        padding: 0;
-    }
+    li {
+        margin-bottom: 2em;
 
-    > li {
-        background-color: $white;
-        box-shadow: 0px 0px 5px rgb(51, 51, 51);
-        box-shadow: 0px 0px 5px rgba(51, 51, 51, 0.7);
-        padding: 0px;
-        margin: 0px 0px 20px;
-
-        &:nth-child(even) time {
-            background-color: rgb(165, 82, 167);
-        }
 
         .desc {
             margin: 0;
         }
 
         time {
-            display: inline-block;
-            width: 100%;
-            color: $white;
-            background-color: rgb(197, 44, 102);
-            padding: 5px;
-            text-align: center;
+            padding: 0.5em;
             text-transform: uppercase;
-            height: 100%;
+
+            @include media-breakpoint-down(sm) {
+                border-right: none;
+                border-bottom: 2px solid $primary;
+                padding: 1em;
+            }
 
             > span {
                 display: none;
@@ -39,14 +28,12 @@
             > .day {
                 display: block;
                 font-size: 56pt;
-                font-weight: 300;
                 line-height: 1;
             }
 
             > .month {
                 display: block;
                 font-size: 24pt;
-                font-weight: 900;
                 line-height: 1;
             }
         }
@@ -54,6 +41,12 @@
 
     .event-desc {
         padding: 1em;
+        border-left: 2px solid $primary;
+        
+        @include media-breakpoint-down(sm) {
+            border-left: none;
+            padding: 1em;
+        }
     }
 
     .event-more {
