Fixed event dates for Safari and fixed 'More Events' button hiding after click

--- a/src/assets/sass/modules/nav.scss
+++ b/src/assets/sass/modules/nav.scss
@@ -6,3 +6,15 @@
 .navbar-brand {
 	padding:0;
 }
+
+.navbar-dark {
+	.navbar-nav {
+		.nav-link {
+			color: rgba($white, 0.8);
+
+			&:hover {
+				color: rgba($white, 1);
+			}
+		}
+	}
+}
