--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root {
+ :root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -7356,6 +7356,9 @@ h1 {
     h1 {
       font-size: 2rem; } }
 
+body {
+  font-family: 'Open Sans', sans-serif; }
+
 h2::after {
   background: #cb2a1d;
   content: '';
@@ -7446,6 +7449,11 @@ p {
 .navbar-brand {
   padding: 0; }
 
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.8); }
+  .navbar-dark .navbar-nav .nav-link:hover {
+    color: white; }
+
 header {
   padding: 154px 0 100px; }
 
@@ -7490,6 +7498,9 @@ section {
 .wrapper {
   padding: 30px;
   padding-top: 60px; }
+
+.snippet {
+  border-top: 1px solid #e5e5e5; }
 
 .info {
   text-align: left;
