--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -8,15 +8,15 @@
 
 @import 'modules/_all.scss';
 
- header {
-    padding: 154px 0 100px;
-  }
+//  header {
+//     padding: 154px 0 100px;
+//   }
 
-  @media (min-width: 992px) {
-    header {
-      padding: 156px 0 100px;
-    }
-  }
+//   @media (min-width: 992px) {
+//     header {
+//       padding: 156px 0 100px;
+//     }
+//   }
 
    section {
     padding: 90px 0;
