--- a/src/assets/sass/modules/hero.scss
+++ b/src/assets/sass/modules/hero.scss
@@ -4,4 +4,12 @@
     background-position: center;
 
     height: 100vh;
+
+    .btn {
+        bottom: 0;
+    }
+}
+
+.uclan-logo {
+    width: 1.5em;
 }
