--- a/src/assets/sass/settings/_variables.scss
+++ b/src/assets/sass/settings/_variables.scss
@@ -229,7 +229,7 @@ $font-weight-light:           300 !default;
 $font-weight-normal:          400 !default;
 $font-weight-bold:            700 !default;
 
-$font-weight-base:            $font-weight-light !default;
+$font-weight-base:            $font-weight-normal !default;
 $line-height-base:            1.5 !default;
 
 $h1-font-size:                $font-size-base * 2.5 !default;
