--- a/src/assets/sass/global/typography.scss
+++ b/src/assets/sass/global/typography.scss
@@ -22,6 +22,9 @@ body {
 }
 
 h2 {
+    letter-spacing: -0.05em;
+    text-align: center;
+
     &::after {
         background: $primary;
         content: '';
