--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- :root {
+:root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -102,7 +102,7 @@ body {
   margin: 0;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: left;
@@ -7352,20 +7352,26 @@ h1 {
   font-size: 5em;
   font-weight: 400;
   padding-bottom: 0.3em; }
+  @media (max-width: 991px) {
+    h1 {
+      font-size: 4rem; } }
   @media (max-width: 767px) {
     h1 {
-      font-size: 2rem; } }
+      font-size: 2.5rem; } }
 
 body {
   font-family: 'Open Sans', sans-serif; }
 
-h2::after {
-  background: #cb2a1d;
-  content: '';
-  display: block;
-  height: 2px;
-  margin: 0 auto;
-  width: 280px; }
+h2 {
+  letter-spacing: -0.05em;
+  text-align: center; }
+  h2::after, .sub-heading:after {
+    background: #cb2a1d;
+    content: '';
+    display: block;
+    height: 2px;
+    margin: 0 auto;
+    width: 280px; }
 
 p {
   font-family: 'Open Sans', sans-serif; }
@@ -7382,11 +7388,137 @@ p {
 .message {
   height: 200px; }
 
-.social-bar > a:not(:last-of-type) {
-  margin-right: 1em; }
+.btn {
+  border: none; }
 
-.lllhd {
-  max-width: 12em; }
+section {
+  padding: 90px 0; }
+
+.flex-stretch {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+
+.wrapper {
+  padding: 30px;
+  padding-top: 60px; }
+
+.about-topic:nth-child(n + 4) {
+  border-top: 1px solid #e5e5e5; }
+  @media (max-width: 767px) {
+    .about-topic:nth-child(n + 4) {
+      border: 0; } }
+
+.about-topic:nth-child(3n - 1), .about-topic:nth-child(3n) {
+  border-left: 1px solid #e5e5e5; }
+  @media (max-width: 767px) {
+    .about-topic:nth-child(3n - 1), .about-topic:nth-child(3n) {
+      border: 0; } }
+
+.sub-heading {
+  font-size: 1.3em;
+  letter-spacing: -0.05em;
+  padding-top: 20px; }
+  .sub-heading:after {
+    max-width: 100%;
+    width: 220px; }
+
+.info {
+  padding: 5px 20px 20px 20px;
+  text-align: left; }
+
+/* Contact Details */
+.contact-logo {
+  width: 35%; }
+
+.contact-info__list-img {
+  height: 22px; }
+
+/* Contact Form */
+.contact-form {
+  background: white;
+  -webkit-border-radius: 0.3rem;
+          border-radius: 0.3rem;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+  height: 140%;
+  padding: 1.5em; }
+
+.material-group {
+  position: relative; }
+
+.input-material {
+  display: block;
+  border: none;
+  border-bottom: 1px solid #cb2a1d;
+  width: 100%; }
+  .input-material:focus {
+    outline: none; }
+
+.label-material {
+  color: #495057;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  -webkit-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all; }
+  .input-material:focus ~ .label-material,
+  .input-material:valid ~ .label-material {
+    top: -20px;
+    color: #cb2a1d; }
+
+.bar {
+  display: block;
+  position: relative;
+  width: 100%; }
+  .bar:before {
+    left: 50%; }
+  .bar:after {
+    right: 50%; }
+  .bar:before, .bar:after {
+    background: #cb2a1d;
+    bottom: 1px;
+    content: '';
+    height: 2px;
+    position: absolute;
+    -webkit-transition: 0.2s ease all;
+    -o-transition: 0.2s ease all;
+    transition: 0.2s ease all;
+    width: 0; }
+  .input-material:focus ~ .bar:before,
+  .input-material:focus ~ .bar:after {
+    width: 50%; }
+
+.highlight {
+  height: 100%;
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 0%;
+  width: 33%; }
+  .input-material:focus ~ .highlight {
+    -webkit-animation: inputHighlighter 0.3s ease;
+            animation: inputHighlighter 0.3s ease; }
+
+@-webkit-keyframes inputHighlighter {
+  from {
+    background: rgba(203, 42, 29, 0.2); }
+  to {
+    background: transparent;
+    width: 0; } }
+
+@keyframes inputHighlighter {
+  from {
+    background: rgba(203, 42, 29, 0.2); }
+  to {
+    background: transparent;
+    width: 0; } }
+
+.textarea-stretch {
+  height: 100%;
+  resize: none; }
 
 .event-list {
   list-style: none;
@@ -7394,6 +7526,9 @@ p {
   padding: 0px; }
   .event-list li {
     margin-bottom: 2em; }
+    .event-list li .name-title {
+      font-size: 1.3em;
+      letter-spacing: -0.05em; }
     .event-list li .desc {
       margin: 0; }
     .event-list li time {
@@ -7415,12 +7550,15 @@ p {
         font-size: 24pt;
         line-height: 1; }
   .event-list .event-desc {
+    border-left: 2px solid #cb2a1d;
     padding: 1em;
-    border-left: 2px solid #cb2a1d; }
+    text-align: center; }
     @media (max-width: 767px) {
       .event-list .event-desc {
         border-left: none;
         padding: 1em; } }
+    .event-list .event-desc .desc {
+      font-size: 0.75em; }
   @media (max-width: 767px) {
     .event-list .event-more .btn {
       width: 100% !important;
@@ -7429,19 +7567,39 @@ p {
       padding-top: 0.75em;
       padding-bottom: 0.75em; } }
 
+.social-bar {
+  padding-top: 12rem;
+  padding-top: 6rem; }
+  @media (min-width: 992px) {
+    .social-bar {
+      padding-top: 8rem; } }
+  .social-bar > a:not(:last-of-type) {
+    margin-right: 1em; }
+
+.lllhd {
+  max-width: 12em; }
+
 .hero {
   background-image: url("../img/hero.jpg");
   -webkit-background-size: cover;
           background-size: cover;
   background-position: center;
   height: 100vh; }
+  .hero .btn {
+    bottom: 0; }
 
-#mainNav {
-  background-color: #cb2a1d; }
+.uclan-logo {
+  margin: 15px 20px -30px;
+  width: 3.5em; }
 
-.btn {
-  background-color: #cb2a1d;
-  border: none; }
+h1 {
+  font-size: 50px; }
+  @media (max-width: 767px) {
+    h1 {
+      font-size: 45px; } }
+
+.navbar {
+  background: #cb2a1d; }
 
 .navbar-brand img {
   width: 38px; }
@@ -7454,80 +7612,42 @@ p {
   .navbar-dark .navbar-nav .nav-link:hover {
     color: white; }
 
-header {
-  padding: 154px 0 100px; }
-
-@media (min-width: 992px) {
-  header {
-    padding: 156px 0 100px; } }
-
-section {
-  padding: 90px 0; }
-
-#WWD {
-  text-align: center;
-  padding: 50px 0px 50px 0px; }
-
-.title {
-  text-align: center;
-  font-family: Helvetica;
-  font-size: 2em;
-  letter-spacing: -0.05em; }
-
-.name-title {
-  text-align: center;
-  font-family: Helvetica;
-  font-size: 1.3em;
-  letter-spacing: -0.05em; }
-
-.sub-heading {
+.sidenav {
+  background-color: #cb2a1d;
+  height: -webkit-calc(100% - 46px);
+  height: calc(100% - 46px);
+  overflow-x: hidden;
   padding-top: 20px;
-  text-align: center;
-  font-family: Helvetica;
-  font-size: 1.3em;
-  letter-spacing: -0.05em; }
+  position: fixed;
+  right: 0;
+  top: 46px;
+  -webkit-transition: all ease-in-out 0.5s;
+  -o-transition: all ease-in-out 0.5s;
+  transition: all ease-in-out 0.5s;
+  width: 0;
+  z-index: 1; }
+  .sidenav .nav-link {
+    color: #fff;
+    display: block;
+    font-size: 20px;
+    padding-left: 23px;
+    text-decoration: none;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; }
+    .sidenav .nav-link:hover {
+      color: #ffffff; }
 
-.sub-heading::after {
-  background: #cb2a1d;
-  content: '';
-  display: block;
-  height: 2px;
-  margin: 0 auto;
-  width: 220px; }
+.nav-toggle {
+  background: none;
+  border: 0; }
+  .sidenav .nav-toggle {
+    position: absolute;
+    top: 8px;
+    right: 15px; }
 
-.wrapper {
-  padding: 30px;
-  padding-top: 60px; }
-
-.snippet {
-  border-top: 1px solid #e5e5e5; }
-
-.info {
-  text-align: left;
-  padding: 5px 20px 20px 20px; }
-
-.snippet {
-  border-top: 1px solid #e5e5e5; }
-  @media (max-width: 767px) {
-    .snippet {
-      border: 0; } }
-
-#bleft {
-  border-left: 1px solid #e5e5e5; }
-  @media (max-width: 767px) {
-    #bleft {
-      border: 0; } }
-
-#time {
-  color: #a3a1a1;
-  text-align: center; }
-
-.desc {
-  font-size: 0.75em !important;
-  text-align: center !important; }
-
-.event-list {
-  padding-top: 30px !important; }
+.sidenav-active {
+  width: 200px; }
 
 .modal:nth-of-type(even) {
   z-index: 1042 !important; }
